=head1 NAME

Memcached::libmemcached::Changes - List of significant changes

=head2 Changes in 1.001701 - 1st Sept 2013

  Sync with libmemcached 1.0.17
  
  Don't let DESTDIR env var upset libmemcached build (Chip Salzenberg).

  Note that get_server_for_key() may have a memory leak.

=head2 Changes in 0.4406 4th Jan 2011

  Added get_server_for_key() thanks to Roy Hooper.

=head2 Changes in 0.4405 29th Oct 2010

  Fix crash if memcached_callback_get(MEMCACHED_CALLBACK_PREFIX_KEY) returns NULL.

=head2 Changes in 0.4404 28th Oct 2010

  Added memcached_callback_set() to enable MEMCACHED_CALLBACK_PREFIX_KEY.
  Added memcached_callback_get()
  Made test timing more robust.

=head2 Changes in 0.4403 28th Oct 2010

  Changed memcached_version() to return the lowest server version seen.
  Added new memcached_{inc,dec}rement{_with_initial,}{_by_key,} methods.
  Added new methods memcached_server_add_with_weight() and
    memcached_server_add_unix_socket_with_weight().
  Added new trace_level() method.

=head2 Changes in 0.4402 26th Oct 2010

  Changed walk_stats() API. Now uses the memcached_stat_execute() function
    and no longer passes $stats_arg as the forth argument to the callback.
  Minor updates to docs.

=head2 Changes in 0.4401 21st Oct 2010

  Sync with libmemcached 0.44
  Fixed core dump in stats function.
  Fixed memory leak in stats function. RT#41496
  Improved error reporting in trace log.

=head2 Changes in 0.4202  2nd Aug 2010

  Fix memcached_version() to properly return a list when called in list context
     this should resolve rt #59864

=head2 Changes in 0.4201 16th Jul 2010

  Sync with libmemcached 0.42
  Squashed various compile warnings
  Many updates to libmemcached API calls due to API changes
  Merged existing svn tree (which was out of sync) with 
  Daisuke's tree

=head2 Changes in 0.3101 6th Sep 2009

  Sync with libmemcached 0.31
  Now tested against memcached 1.4.1
  Now tested with binary protocol