@@ -2,10 +2,12 @@
 
 Memcached::libmemcached::Changes - List of significant changes
 
-=head2 Changes in 1.001701 - 1st Sept 2013
+=head2 Changes in 1.001701 - 2nd Sept 2013
 
   Sync with libmemcached 1.0.17
-  
+  Fixed links in docs, RT#66291
+  Fixed whatis in pod of Memcached::libmemcached::API, RT#71172
+  Fixed undef warnings related to expiration, RT#69996
   Don't let DESTDIR env var upset libmemcached build (Chip Salzenberg).
 
   Note that get_server_for_key() may have a memory leak.
